# img-filter-docs-page

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  Reference.md  cmdtests.cmake  main2  mainpage.dox
docs/html/: _blur_8cpp.html  _blur_8h.html  _blur_8h.js  _blur_8h_source.html  _blur_filter3_d_8cpp.html  _blur_filter3_d_8h.html  _blur_filter3_d_8h.js  _blur_filter3_d_8h_source.html  _edge_detector_8cpp.html  _edge_detector_8h.html  _edge_detector_8h.js  _edge_detector_8h_source.html  _filter_8h.html  _filter_8h.js  _filter_8h_source.html  _image_8cpp.html  _image_8h.html  _image_8h.js  _image_8h_source.html  _median_utils_8h.html  _median_utils_8h.js  _median_utils_8h_source.html  _projection_8cpp.html  _projection_8h.html  _projection_8h.js  _projection_8h_source.html  _sharpener_8cpp.html  _sharpener_8h.html  _sharpener_8h.js  _sharpener_8h_source.html  _simple_filter_8cpp.html  _simple_filter_8h.html  _simple_filter_8h.js  _simple_filter_8h_source.html  _slice_8cpp.html  _slice_8cpp.js  _slice_8h.html  _slice_8h.js  _slice_8h_source.html  _volume_8cpp.html  (+78 more)
docs/latex/: _blur_8cpp.tex  _blur_8h.tex  _blur_8h_source.tex  _blur_filter3_d_8cpp.tex  _blur_filter3_d_8h.tex  _blur_filter3_d_8h_source.tex  _edge_detector_8cpp.tex  _edge_detector_8h.tex  _edge_detector_8h_source.tex  _filter_8h.tex  _filter_8h_source.tex  _image_8cpp.tex  _image_8h.tex  _image_8h_source.tex  _median_utils_8h.tex  _median_utils_8h_source.tex  _projection_8cpp.tex  _projection_8h.tex  _projection_8h_source.tex  _sharpener_8cpp.tex  _sharpener_8h.tex  _sharpener_8h_source.tex  _simple_filter_8cpp.tex  _simple_filter_8h.tex  _simple_filter_8h_source.tex  _slice_8cpp.tex  _slice_8h.tex  _slice_8h_source.tex  _volume_8cpp.tex  _volume_8h.tex  _volume_8h_source.tex  annotated.tex  class_blur.eps  class_blur.tex  class_blur_filter3_d.eps  class_blur_filter3_d.tex  class_edge_detector.eps  class_edge_detector.tex  class_filter.eps  class_filter.tex  (+25 more)
src/: Filter.h  Image.cpp  Image.h  Projection.cpp  Projection.h  Slice.cpp  Slice.h  Volume.cpp  Volume.h  main.cpp
src/2D/: Blur.cpp  Blur.h  EdgeDetector.cpp  EdgeDetector.h  Sharpener.cpp  Sharpener.h  SimpleFilter.cpp  SimpleFilter.h
src/3D/: BlurFilter3D.cpp  BlurFilter3D.h
tests/2D/: TestBlur.cpp  (+6 more)
(+68 files in other folders)
